# agentic-debugger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  debugger.py  download_model.py  pyproject.toml  requirements.txt  sample_design.json  sample_metrics.csv  setup.py
agentic_debugger/: __init__.py  agents.py  base.py  llm.py  supervisor.py
examples/: run_supervisor.py
